--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -25,6 +25,7 @@
 \newcommand{\figpar}{\vspace*{-3mm}}
 \newcommand{\figspaces}{\vspace*{-7mm}}
 \newcommand{\mymathstyle}{\textstyle}
+\newcommand{\putHeatAlpha}[1]{\hspace*{5pt} \boldmath$\alpha = #1$ \vspace*{-9pt}}
 
 \IEEEoverridecommandlockouts
 
