keyowrd alterado para sumbeter a IEEE T. Power Systems

--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -48,7 +48,9 @@
 \end{abstract}
 
 \begin{IEEEkeywords}
-OR in energy, combinatorial optimization, metaheuristics
+% OR in energy, combinatorial optimization, metaheuristics
+% keywors para IEEE Transaction on Power Systems
+Operations research, Integer Programming, Power distribution economics, Management decision-making
 \end{IEEEkeywords}
 
 \IEEEpeerreviewmaketitle
