--- a/doc/pubs/IEEE-TPD2015/cover-letter.tex
+++ b/doc/pubs/IEEE-TPD2015/cover-letter.tex
@@ -10,16 +10,16 @@ Vit\'oria, ES, Brazil
 \begin{document}
 
 \begin{letter}{
-Wilsun Xu, Ph.D.,\\
+Nikos Hatziargyriou, Ph.D.,\\
 Editor-in-Chief\\
-IEEE Transactions on Power Delivery
+IEEE Transactions on Power Systems
 }
 
-\opening{Dear Dr. Wilsum Xu:}
+\opening{Dear Dr. Nikos Hatziargyriou:}
 
 Please find enclosed a manuscript entitled:
 ``An Experimental Analysis of three Computational Approaches for Minimizing Losses on Electricity Distribution''
-which I am submitting for exclusive consideration of publication as an article in IEEE Transactions on Power Delivery.
+which I am submitting for exclusive consideration of publication as an article in IEEE Transactions on Power Systems.
 
 The manuscript approaches a combinatorial problem that aims to reduce
 non-technical losses in power distribution.
