salvando agora .ps e .dvi

--- a/doc/pubs/IEEE-TPD2015/main.tex
+++ b/doc/pubs/IEEE-TPD2015/main.tex
@@ -34,11 +34,11 @@
 \title{An Experimental Analysis of three Computational Approaches for Minimizing Losses on Electricity Distribution}
 
 \author{Jo\~ao Carlos.~H.~Moreira,
-	Marcos Daniel.~V.~Baroni\thanks{Research supported by Funda\c c\~ao de Amparo \`a Pesquisa do Esp\'irito Santo.},
+	Marcos Daniel.~V.~Baroni,
 	Fl\'avio~M.~Varej\~ao,
 }
 
-\markboth{IEEE TRANSACTIONS ON POWER DELIVERY ,Vol.~--, No.~--, --~2015}%
+\markboth{IEEE TRANSACTIONS ON POWER DELIVERY ,Vol.~--, No.~--, --~2016}%
 {Moreira \MakeLowercase{\textit{et al.}}: An Experimental Analysis of three Computational Approaches for Minimizing Losses on Electricity Distribution}
 
 \maketitle
@@ -64,7 +64,8 @@ Operations research, Integer Programming, Power distribution economics, Manageme
 \input{conclusion.tex}
 
 \section*{Acknowledgement}
-The authors wish to thank EDP Energias do Brasil S.A. for cooperation in this research.
+The authors wish to thank EDP Energias do Brasil S.A., for cooperation in this research, and
+Funda\c c\~ao de Amparo \`a Pesquisa do Esp\'irito Santo for its partial support.
 
 % Can use something like this to put references on a page
 % by themselves when using endfloat and the captionsoff option.
