--- a/doc/pubs/IEEE-CEC2016/poster/texs/results.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/results.tex
@@ -1,21 +1,23 @@
 Two main tests was considered:
-(a) using the well-known set of problems defined by Chu and Beasley \cite{Chu-Beasley-1998}
+(a) using the well-known set of problems defined by Chu and Beasley~\cite{Chu-Beasley-1998}
 and (b) a large set of randomly generated instances using uniform distribution.
 The number of constraints $m$ varies among $5$, $10$ and $30$, and the number
 of variables $n$ varies among $100$, $250$ and $500$.
 \\[2mm]
 \begin{minipage}[c]{0.4\linewidth}
   \begin{center}
+    %\input{texs/tab-chub2.tex}
     \input{texs/tab1.tex}
-	\\[2mm]
-	Chu-Beasley problems.
+        \\[2mm]
+        \scecore~performance on Chu-Beasley problems.
   \end{center}
 \end{minipage}
 \begin{minipage}[c]{0.6\linewidth}
   \begin{center}
-    \input{texs/tab2.tex}
-	\\[2mm]
-	Random generated problems.
+    \input{texs/tab-gk2.tex}
+        \\[2mm]
+        Random generated problems.
+        \scecore~performance on Glover-Kochenberger problems.
   \end{center}
 \end{minipage}
 \\[2mm]
