--- a/doc/pubs/IEEE-CEC2016/poster/texs/results.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/results.tex
@@ -6,8 +6,7 @@ of variables $n$ varies among $100$, $250$ and $500$.
 \\[2mm]
 \begin{minipage}[c]{0.4\linewidth}
   \begin{center}
-    %\input{texs/tab-chub2.tex}
-    \input{texs/tab1.tex}
+    \input{texs/tab-chub2min.tex}
         \\[2mm]
         \scecore~performance on Chu-Beasley problems.
   \end{center}
@@ -16,7 +15,6 @@ of variables $n$ varies among $100$, $250$ and $500$.
   \begin{center}
     \input{texs/tab-gk2.tex}
         \\[2mm]
-        Random generated problems.
         \scecore~performance on Glover-Kochenberger problems.
   \end{center}
 \end{minipage}
