--- a/doc/pubs/IEEE-CEC2016/poster/texs/sce-mkp.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/sce-mkp.tex
@@ -3,7 +3,15 @@ optimization problem.
 The only steps needed to be specified is the creation of a new random
 solution (Algorithm 1) and the crossing procedure of two solutions (Algorithm 2).
 \begin{center}
-\includegraphics[width=0.85\linewidth]{imgs/alg-new}\\[3mm]
-\includegraphics[width=0.85\linewidth]{imgs/alg-cross}
+\begin{minipage}[c]{0.5\linewidth}
+  \begin{center}
+    \includegraphics[width=0.87\linewidth]{imgs/alg-new}\\[3mm]
+  \end{center}
+\end{minipage}
+\begin{minipage}[c]{0.4\linewidth}
+  \begin{center}
+    \includegraphics[width=0.95\linewidth]{imgs/alg-cross}
+  \end{center}
+\end{minipage}
 \end{center}
 %\vspace{0.1mm}
