--- a/doc/pubs/IEEE-CEC2016/poster/texs/future.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/future.tex
@@ -1,3 +1,5 @@
 Future work includes the investigation of different crossing procedures,
 the use of local search in the process of evolving complexes and the
 application of problem reduction procedures for the MKP.
+
+futer works....
