--- a/doc/pubs/IEEE-CEC2016/poster/texs/mkp.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/mkp.tex
@@ -7,6 +7,9 @@ defined as follows:
     \text{s. to} ~ & {\mymathstyle \sum_{j=1}^n w_{ij} x_j \leqslant c_i \quad i \in \{1, \ldots, m\}}\\
    & x_j \in \{0, 1\}, \quad j \in \{1, \ldots, n\}.
 \end{align*}
-\vspace{30pt}
-The work address the application of a metaheuristic called
-shuffled complex evolution (SCE) to the MKP.
+The problem is a generalization of the well-known knapsack problem (KP) in which
+$m = 1$.
+
+This work addresses an hybrid heuristic using an
+efficient variable fixing procedure and the SCE metaheuristic as an improvement
+proposal for the work in \cite{baroni2015shuffled}.
