--- a/doc/pubs/IEEE-CEC2016/poster/texs/sce.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/sce.tex
@@ -1,4 +1,5 @@
-The shuffled complex evolution is a population
+The shuffled complex evolution (SCE) \cite{duan1992effective}
+is a population
 based evolutionary optimization algorithm that regards a natural 
 evolution happening simultaneously in $N$ independent communities (or complexes).
 
@@ -14,7 +15,6 @@ individual $M+1$ goes back to the first complex, etc.
 {\small The SCE algorithm.} & {\small Evolving stage.}
 \end{tabular}
 \end{center}
-\nocite{duan1992effective}
 The next step after shuffling the complexes is to evolve each complex through
 a fixed amount of $K'$ steps:
 the individuals in each complex is sorted by descending order of fitness quality.
