--- a/doc/pubs/IEEE-CEC2016/poster/texs/setup.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/setup.tex
@@ -1,9 +1,11 @@
+Several computational experiments was executed to verify the efficiency of the
+hybrid method (\scecore) over the original SCE proposed in
+\cite{baroni2015shuffled} (SCE).
+
 A batch of preliminary tests was driven to find the best parameters for the
 problem:\vspace{-2mm}
-\vspace{30pt}
 \begin{center}
   \input{texs/params-tab.tex}
 \end{center}
-\vspace{30pt}
 All the experiments was run on a 3.40GHz computer with 4GB of RAM.
 SCE lgorithm was implemented in C programming language.
