--- a/doc/pubs/IEEE-CEC2016/poster/texs/sce-mkp.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/sce-mkp.tex
@@ -1,8 +1,9 @@
 As it can be noted in its description the SCE is easly applied to any
 optimization problem.
-The only steps needed to be specified is the creation of a new random
-solution (Algorithm 1) and the crossing procedure of two solutions (Algorithm 2).
+The only steps needed to be specified is the creation of a {\bf new MKP random
+solution} (Algorithm 1) and the {\bf crossing procedure of two MKP solutions} (Algorithm 2).
 \begin{center}
+\hspace*{-28pt}
 \begin{minipage}[c]{0.5\linewidth}
   \begin{center}
     \includegraphics[width=0.87\linewidth]{imgs/alg-new}\\[3mm]
