--- a/doc/pubs/IEEE-CEC2016/poster/texs/conclusions.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/conclusions.tex
@@ -3,7 +3,7 @@ evolution (SCE) to the multidimensional knapsack problem and investigated it
 performance through several computational experiments.
 
 The SCE algorithm, which combines the ideas of a controlled random search with
-the concepts of competitive evolution proved to be very effective in finding
-good solution for hard instances of MKP, demanding a very small amount of
+the concepts of competitive evolution proved to be {\bf effective} in finding
+good solution for hard instances of MKP, demanding short amount of
 processing time to reach high quality solutions for MKP.
 
