--- a/doc/pubs/IEEE-CEC2016/poster/texs/core.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/core.tex
@@ -1,46 +1,43 @@
+The {\bf core} of a knapsack problem is a set items for which it is hard to decide
+if they will occur or not in a good solution.
+The best way to acoomplish this is determining an {\bf efficiency} (or {\it cost-benefit}) measure $e_j$ for each item.
 
-The core concept was first presented for the one-dimensional 0-1 knapsack problem (KP),
-leading to very successful KP algorithms.
-The main idea is to reduce the original problem by only considering a set of
-items for which it is hard to decide if they will occur or not in an optimal solution.
-This set of items is named core.
-The variables for all items outside the core are fixed to certain values.
+Those items with low efficiency are fixed outside the knapsack while items with high
+efficiency are fixed inside the knapsack.
+The remaining items, with medium efficiency, items constitute the core of the knapsack.
+\vspace{-9pt}
+\begin{center}
+  \includegraphics[scale=0.38]{imgs/efficiency} \\
+  {\small Example of core for a hypothetical MKP instance.}
+\end{center}
+For the case of a single constraint (KP) the following efficiency measure can
+be considered \vspace{-5pt}
+\begin{displaymath}
+  e_j = \frac{p_j}{w_j}.
+\end{displaymath}
+Unfortunately on the MKP there are multiple resources (constraint) to be considered as cost.
+Each of then may have different relevance on the cost the item.
+This drawback can be avoided by introducing {\bf relevance values} $r_i$
+for every constraint:
+\begin{displaymath}
+  e_j(relevance) = \frac{p_j}{\sum_{i=1}^{m} r_i w_{ij}}
+\end{displaymath}
+According to \cite{puchinger2006core} setting $r_i$ to the values
+of an optimal solution to the dual problem of the MKP's
+LP-relaxation, achieves the best results and will be the one
+considered in this work.
+The optimal solution to the dual problem measures the {\bf scarcity} of that resource
 
-\begin{equation}
-  e_j = \frac{p_j}{w_j},
-\end{equation}
-
-The knapsack problem considers items $j = 1, \ldots, n$, associated profits $p_j$ and
-associated weights $w_j$.
-A subset of these items has to be selected and packed into a knapsack having capacity $c$.
-The total profit of the items in the knapsack has to be maximized, while the
-total weight is not allowed to exceed $c$.
-The KP Core problem (KPC) is defined as
+Considering the items in the interval $C = \{ a, \ldots, b \}$ as the core,
+the {\bf MKP core problem (MKPC)} can be defined as:
 \begin{align}
-  \text{maximize} & \sum_{j \in C} p_j x_j  + \tilde{p}\\
-  \text{subject to} & \sum_{j \in C} w_{j} x_j \leqslant c - \tilde{w}\\
+    \text{maximize} & {\mymathstyle \sum_{j \in C} p_j x_j  + \tilde{p}}\\
+    \text{subject to} & {\mymathstyle \sum_{j \in C} w_{ij} x_j \leqslant c_i - \tilde{w}_i, \quad i = 1, \ldots, m}\\
   & x_j \in \{0, 1\}, \quad j \in C.
 \end{align}
+with $\tilde{p} = \sum^{a-1}_{j=1} p_j$  and $\tilde{w}_i = \sum^{a-1}_{j=1} w_{ij}, i = 1, \ldots, m$
+respectively quantifying the total profit and the total weights of items fixed as selected.
 
-The first row represents the efficiency value of each item and the second row
-represents the value of each variable on the LP-relaxation optimal solution.
-The items are sorted in descending order of efficiency value.
-The last row illustrates the variable fixing after the defined core.
-Asterisks indicate free variables associated to the items in the
-approximate core.
+This work addresses the development of a SCE metaheuristic applied to MKP core problem.
+This hybrid SCE will be referred to as {\bf SCEcr}.
 
-The previous definition of the core for KP can be extended to MKP without major
-difficulties, once an efficiency measure is defined for the MKP,
-as addressed in, even though,
-a proper efficiency measure for MKP is not obvious due the
-multidimensional weight of the items.
-A well accepted efficiency measure is discussed in Section~\ref{subsec:dual}.
-
-Now let $x^*$ be an optimal solution for a MKP and assume that the items are
-sorted in descending order after some given efficiency measure. Then let
-\begin{align}
-  a = \min \{ j | x_j^* = 0 \}, \quad b = \max \{ j | x_j^* = 1 \}.
-\end{align}
-
-In contrast to KP, the solution of the LP-relaxation of MKP in general does not
-consists of a single fractional split item.
