--- a/doc/pubs/IEEE-CEC2016/poster/texs/setup.tex
+++ b/doc/pubs/IEEE-CEC2016/poster/texs/setup.tex
@@ -1,11 +1,12 @@
 Several computational experiments was executed to verify the efficiency of the
 hybrid method (\scecore) over the original SCE proposed in
 \cite{baroni2015shuffled} (SCE).
+In all instances the {\bf parameters} used for SCE and \scecore were the same recommended
+in \cite{baroni2015shuffled} which was found after a batch test using Chu and Beasley instances:
 
-A batch of preliminary tests was driven to find the best parameters for the
-problem:\vspace{-2mm}
 \begin{center}
   \input{texs/params-tab.tex}
 \end{center}
-All the experiments was run on a 3.40GHz computer with 4GB of RAM.
-SCE lgorithm was implemented in C programming language.
+
+The experiments were run on a 3.40GHz computer with 4GB of RAM.
+The algorithms was implemented in C programming language.
