tentando descobrir problema na filtragem da avl pela lista non_proms

--- a/doc/pubs/MOKP-DP-2017/tex/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/paper.tex
@@ -6,8 +6,7 @@
 
 \begin{document}
 
-\title{A fast dynamic programming for
-the multidimensional knapsack problem}
+\title{A fast dynamic programming multi-objective knapsack problem}
 
 \author{
    Marcos Daniel Valad\~ao Baroni\thanks{Research supported by Funda\c c\~ao de Amparo \`a Pesquisa do Esp\'irito Santo.}
