--- a/doc/pubs/MOKP-DP-2017/tex/abstract.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/abstract.tex
@@ -1,5 +1,5 @@
 This work addresses...
-The Multidimensional knapsack programming.
+The Multidi Objective knapsack programming.
 The dynamic programming method...
 The data structure...
 %\keywords{ Multidimensional knapsack problem, Dynamic programming}
