Script para sumario de resultados CSV

--- a/doc/pubs/MOKP-DP-2017/tex/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/paper.tex
@@ -20,6 +20,23 @@
 \input{abstract.tex}
 \end{abstract}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+% 1. Introduction
+%    - 
+% 2. The MOKP
+%    - 
+% 3. Dyn. Programming Alg. for MOKP
+%    - 
+% 4. Use of KDTree
+%    - The KDTree data structure
+% 5. Experiments
+%    - Instances
+%    - Results
+% 6. Conclusions
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Introduction}
 \label{sec:intro}
 % THE MOKP Problem
