outline dos sections

--- a/doc/pubs/MOKP-DP-2017/tex/01-intro.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/01-intro.tex
@@ -1,5 +1,7 @@
 %  - The problem and its application
+%  - Dificuldade do Problema
 %  - Literature background
 %  - The Bazgan algorithm
 %  - Our approach (motivation and use of KDTRee)
 %  - Article structure
+
