--- a/doc/pubs/MOKP-DP-2017/tex/02-mokp.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/02-mokp.tex
@@ -1,3 +1,4 @@
-- Breve resumo sobre métodos de programação dynamica; \\
-- Explicação overview do método para o MOKP; \\
-- Definições, Propriedados e teoremas para o MOKP: dominancia \\
+% Breve resumo sobre métodos de programação dynamica
+% Explicação overview do método para o MOKP
+% Definições, Propriedados e teoremas para o MOKP: dominancia
+
