--- a/doc/pubs/MOKP-DP-2017/tex/04-kdtree.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/04-kdtree.tex
@@ -1,2 +1,29 @@
-- Introdução à KDTree: estrutura, inserção, busca \\
-- Aplicação da KDTree ao algoritmo: validade das propriedades de dominancia \\
+% Histórico da kdtree: 
+%  - primeira proposta. 
+%  - Objetivo. Eficientcia
+%  - Teste de colisão, pertinencia e amplitude
+
+% Utilizacao:
+%  - objetos espaciais 2D/3D):
+%  - renderizacao
+
+% Vantagens sobre outras estruturas (quad-tree, etc):
+%  - menor sensibilidade a distribuicao tendensiosa.
+
+% Discussao sobre eficiencia
+%  - máximo de dimensoes ( |n| >> 2^dim )
+
+% Estrutura e Operacoes:
+%  - estrutura de indexacão
+%  - Insercao
+%  - range-search
+
+% Utilizacao no Algoritmo
+% Possibilidade de utilizacao no processo de range seaarch, ao buscar uma
+% solucao dominante.
+
+% Explicacão da indexacão das solucoes e da funcao de range.
+
+% Mencionar que esta proposta de indexacao viabiliza a aplicacão do algoritmo em problemas
+% com maiores dimensões.
+
