inicio sobre kdtree

--- a/doc/pubs/MOKP-DP-2017/paper.tex
+++ b/doc/pubs/MOKP-DP-2017/paper.tex
@@ -4,6 +4,9 @@
 \usepackage{amssymb,amsmath}
 \usepackage{graphicx}
 
+%%%   PREDEFINITIONS   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\kdtree}{$k$-d tree}
+
 \begin{document}
 
 \title{A fast dynamic programming multi-objective knapsack problem}
@@ -74,7 +77,7 @@
 \label{sec:conc}
 \input{tex/06-conc.tex}
 
-%\bibliographystyle{splncs03}
+\bibliographystyle{plain}
 \bibliography{tex/refs}
 
 \end{document}
