--- a/doc/pubs/MOKP-DP-2017/tex/03-dynprog.tex
+++ b/doc/pubs/MOKP-DP-2017/tex/03-dynprog.tex
@@ -1,6 +1,7 @@
 % - Process overview of DP for MKP
 % - Dom. relations
 % - Application of dom. rel.
+\cite{bazgan2009}
 
 
 % Basic simple Dynamic Programming
