--- a/doc/pubs/MOKP-DP-2017/tex/refs.bib
+++ b/doc/pubs/MOKP-DP-2017/tex/refs.bib
@@ -42,8 +42,6 @@
   organization={ACM}
 }
 
-
-
 % kdtree on geometry
 @book{preparata2012computational,
   title={Computational geometry: an introduction},
@@ -51,6 +49,15 @@
   year={2012},
   publisher={Springer Science \& Business Media}
 }
+@book{guttman1984r,
+  title={R-trees: a dynamic index structure for spatial searching},
+  author={Guttman, Antonin},
+  volume={14},
+  number={2},
+  year={1984},
+  publisher={ACM}
+}
+
 
 % graphic rendering
 @inproceedings{owens2007survey,
